python3.9 (3.9.5-2) UNRELEASED; urgency=medium

  * Re-add the dependency on libdb-dev.  With Python 3.10, building
    the _dbm extension using libgdbm-compat-dev, and moving the _dbm
    extension into the python3-gdbm package.

 -- Matthias Klose <doko@x1e>  Thu, 06 May 2021 10:05:45 +0200

python3.9 (3.9.5-1) experimental; urgency=medium

  * Python 3.9.5 release.
  * Refresh patches.
  * Drop the unused build dependency on libdb-dev.

 -- Matthias Klose <doko@debian.org>  Tue, 04 May 2021 06:08:53 +0200

python3.9 (3.9.4-1) experimental; urgency=medium

  * Python 3.9.4 release.

 -- Matthias Klose <doko@debian.org>  Sun, 04 Apr 2021 21:38:44 +0200

python3.9 (3.9.3-2) experimental; urgency=high

  * Fix flags substitutions for _sysconfigdata.
  * Revert the fix for issue #42500, breaking ABI on 32bit architectures.

 -- Matthias Klose <doko@debian.org>  Sun, 04 Apr 2021 11:36:06 +0200

python3.9 (3.9.3-1) experimental; urgency=medium

  * Python 3.9.3 release.
    - Fix issue #42988: CVE-2021-3426: Remove the getfile feature of the
      pydoc module which could be abused to read arbitrary files on the
      disk (directory traversal vulnerability).
    - Other security issues without a CVE.
    - Other fixes. See the NEWS file.
  * Move zlib1g-dev dependency to libpython3.9-dev. Closes: #984580.
  * Configure with --libdir=/usr/lib/$(DEB_HOST_MULTIARCH), recording the
    correct LIBDIR in _sysconfigdata.  Also adjust DESTSHARED to install
    lib-dynload into the same location as before the configure change.
    See issue #43229.

 -- Matthias Klose <doko@debian.org>  Sat, 03 Apr 2021 11:27:11 +0200

python3.9 (3.9.2-1) unstable; urgency=medium

  * Python 3.9.2 release. No changes since 3.9.2~rc1-1.
  * Build idlelib/help.html from source, don't ship the pre-generated file.
  * Autopkg tests:
    - Run testsuite{,-dbg} autopkg tests with allow-stderr. Closes: #983305.
    - Run again in testsuite instead of failing-tests: test_ftplib,